# HW7/swagger/v1/swagger.yaml
@@ -8,12 +8,19 @@ paths:
     parameters:
     - name: post_id
       in: path
-      description: post_id
+      default: 1
+      description: Post ID
       required: true
       schema:
-        type: string
+        type: integer
     get:
       summary: list comments
+      parameters:
+      - name: status
+        in: query
+        description: 'Filter comments by status: published/unpublished'
+        schema:
+          type: string
       tags:
       - Comments
       responses:
@@ -23,23 +30,46 @@ paths:
       summary: create comment
       tags:
       - Comments
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                body:
+                  type: string
+                status:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+                post_id:
+                  type: integer
+                  default: 1
+              required:
+              - body
+              - status
+              - author_id
+              - post_id
   "/api/v1/posts/{post_id}/comments/{id}":
     parameters:
     - name: post_id
       in: path
-      description: post_id
+      default: 1
+      description: Post ID
       required: true
       schema:
-        type: string
+        type: integer
     - name: id
       in: path
-      description: id
+      description: ID of the required comment
       required: true
       schema:
-        type: string
+        type: integer
     get:
       summary: show comment
       tags:
@@ -51,16 +81,60 @@ paths:
       summary: update comment
       tags:
       - Comments
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                body:
+                  type: string
+                status:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+                post_id:
+                  type: integer
+                  default: 1
+              required:
+              - body
+              - status
+              - author_id
+              - post_id
     put:
       summary: update comment
       tags:
       - Comments
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                body:
+                  type: string
+                status:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+                post_id:
+                  type: integer
+                  default: 1
+              required:
+              - body
+              - status
+              - author_id
+              - post_id
     delete:
       summary: delete comment
       tags:
@@ -73,6 +147,37 @@ paths:
       summary: list posts
       tags:
       - Posts
+      parameters:
+      - name: search
+        in: query
+        description: Search posts by keywords from title or body
+        schema:
+          type: string
+      - name: status
+        in: query
+        description: 'Filter posts by status: published/unpublished'
+        schema:
+          type: string
+      - name: author
+        in: query
+        description: Filter posts by author name
+        schema:
+          type: string
+      - name: tags
+        in: query
+        description: Filter posts by tags
+        schema:
+          type: string
+      - name: sort
+        in: query
+        description: 'Sort posts by titles: asc/desc'
+        schema:
+          type: string
+      - name: page
+        in: query
+        description: Choose page
+        schema:
+          type: integer
       responses:
         '200':
           description: successful
@@ -80,17 +185,38 @@ paths:
       summary: create post
       tags:
       - Posts
+      parameters: []
       responses:
-        '200':
-          description: successful
+        '201':
+          description: created
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                status:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+              required:
+              - title
+              - body
+              - status
+              - author_id
   "/api/v1/posts/{id}":
     parameters:
     - name: id
       in: path
-      description: id
+      description: ID of the required post
       required: true
       schema:
-        type: string
+        type: integer
     get:
       summary: show post
       tags:
@@ -102,16 +228,52 @@ paths:
       summary: update post
       tags:
       - Posts
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+              required:
+              - title
+              - body
+              - author_id
     put:
       summary: update post
+      parameters: []
       tags:
       - Posts
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                author_id:
+                  type: integer
+                  default: 1
+              required:
+              - title
+              - body
+              - author_id
     delete:
       summary: delete post
       tags:
